# omni

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  INSTALL.md  MIGRATION.md  Makefile  README.md  ROADMAP.md  SECURITY.md  bun.lockb  install.sh  omni.rb  omni_config.json  package-lock.json  package.json  test-semantic.mjs  tsconfig.json  vercel.json
.agents/workflows/: release.md
.github/: FUNDING.yml  pull_request_template.md
.github/workflows/: ai-pr-describer.yml  ci.yml  release.yml
benches/: pipeline.rs
core/: build.zig  build.zig.zon
core/src/: compressor.zig  local_metrics.zig  main.zig  monitor.zig  telemetry.zig  ui.zig  wasm.zig
docs/: CLI_REFERENCE.md  DEVELOPMENT.md  DSL_GUIDE.md  FILTERS.md  ROADMAP.md  SESSION.md  index.html
filters/: ansible.toml  bundle.toml  cargo.toml  composer.toml  docker_compose.toml  eslint.toml  git_log.toml  go_test.toml  kubectl.toml  kubectl_logs.toml  make.toml  npm.toml  npm_audit.toml  phpunit.toml  pip.toml  pytest.toml  rspec.toml  terraform.toml  tsc.toml  vitest.toml
page/: index.html  script.js  style.css  vercel.json
scripts/: bump_version.sh  install.sh  omni-deploy-edge.sh  omni-release.sh
src/: index.js  index.ts  lib.rs  main.rs
src/cli/: doctor.rs  init.rs  learn.rs  mod.rs  session.rs  stats.rs
src/distillers/: build.rs  generic.rs  git.rs  infra.rs  log.rs  mod.rs  tabular.rs  test.rs
src/guard/: env.rs  limits.rs  (+2 more)
tests/: README.md  hook_e2e.rs  savings_assertions.rs  security_tests.rs  smoke_test.sh  test-helper.d.ts  test-helper.js  tsconfig.json
(+61 files in other folders)
